// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders comment not found 1`] = `
<ForwardRef(forwardRef)
  className="PermalinkView-root"
  size="double"
>
  <withContext(createMutationContainer(withContext(createMutationContainer(withContext(createMutationContainer(withContext(withLocalStateContainer(Relay(UserBoxContainer)))))))))
    me={Object {}}
    settings={Object {}}
  />
  <ForwardRef(forwardRef)
    alignItems="center"
    direction="column"
    justifyContent="center"
  >
    <Localized
      id="comments-permalinkView-currentViewing"
    >
      <ForwardRef(forwardRef)
        className="PermalinkView-title1"
      >
        You are currently viewing a
      </ForwardRef(forwardRef)>
    </Localized>
    <Localized
      id="comments-permalinkView-singleConversation"
    >
      <ForwardRef(forwardRef)
        className="PermalinkView-title2"
      >
        SINGLE CONVERSATION
      </ForwardRef(forwardRef)>
    </Localized>
    <Localized
      id="comments-permalinkView-viewFullDiscussion"
    >
      <ForwardRef(forwardRef)
        anchor={true}
        color="primary"
        href="http://localhost/link"
        onClick={[Function]}
        target="_parent"
        variant="underlined"
      >
        View Full Discussion
      </ForwardRef(forwardRef)>
    </Localized>
  </ForwardRef(forwardRef)>
  <Localized
    id="comments-permalinkView-commentNotFound"
  >
    <ForwardRef(forwardRef)>
      Comment not found
    </ForwardRef(forwardRef)>
  </Localized>
</ForwardRef(forwardRef)>
`;

exports[`renders correctly 1`] = `
<ForwardRef(forwardRef)
  className="PermalinkView-root"
  size="double"
>
  <withContext(createMutationContainer(withContext(createMutationContainer(withContext(createMutationContainer(withContext(withLocalStateContainer(Relay(UserBoxContainer)))))))))
    me={Object {}}
    settings={Object {}}
  />
  <ForwardRef(forwardRef)
    alignItems="center"
    direction="column"
    justifyContent="center"
  >
    <Localized
      id="comments-permalinkView-currentViewing"
    >
      <ForwardRef(forwardRef)
        className="PermalinkView-title1"
      >
        You are currently viewing a
      </ForwardRef(forwardRef)>
    </Localized>
    <Localized
      id="comments-permalinkView-singleConversation"
    >
      <ForwardRef(forwardRef)
        className="PermalinkView-title2"
      >
        SINGLE CONVERSATION
      </ForwardRef(forwardRef)>
    </Localized>
    <Localized
      id="comments-permalinkView-viewFullDiscussion"
    >
      <ForwardRef(forwardRef)
        anchor={true}
        color="primary"
        href="http://localhost/link"
        onClick={[Function]}
        target="_parent"
        variant="underlined"
      >
        View Full Discussion
      </ForwardRef(forwardRef)>
    </Localized>
  </ForwardRef(forwardRef)>
  <ForwardRef(forwardRef)>
    <withContext(withContext(createMutationContainer(Relay(ConversationThreadContainer))))
      comment={Object {}}
      me={Object {}}
      settings={Object {}}
      story={Object {}}
    />
    <div
      className="PermalinkView-replyList"
    >
      <withProps(Relay(ReplyListContainer))
        comment={Object {}}
        me={Object {}}
        settings={Object {}}
        story={Object {}}
      />
    </div>
  </ForwardRef(forwardRef)>
</ForwardRef(forwardRef)>
`;
